objects/Project_Definition__c.object
<CustomObject>
    <description>This object will hold the attributes of the project.</description>
    <fields>
        <fullName>Default_POA_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default POA Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedProjectPieces__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEPRECATED</description>
        <label>NeedProjectPieces DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POA_Type__c</fullName>
        <inlineHelpText>Sets the record type of the POA that is generated. If this is blank, no POA will be generated.</inlineHelpText>
        <label>POA Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Haystak ADVD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Account Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Behavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Social</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Website</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <inlineHelpText>Determines how many projects are created. Each separate Project Category called by sold products will create 1 project. If two sold products have the same Project Category, one project will be created for them to share.</inlineHelpText>
        <label>Project Definition Category</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Display</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Behavioral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEM CLLC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Priority__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Used to decide which project, if more than one Project Definition with the same project category is found on the Opp&apos;s Products, should take priority for generating values (e.g. Project Type, Project Record Type). Highest value wins.</inlineHelpText>
        <label>Definition Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Record_Type__c</fullName>
        <label>Project Record Type</label>
        <picklist>
            <picklistValues>
                <fullName>Basic Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FROZEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phased Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staged Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>vAuto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websites</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Short_Code__c</fullName>
        <inlineHelpText>Determines the first 3 characters of the Project&apos;s name for HAY and VIN.</inlineHelpText>
        <label>Project Short Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Sets the Project field &quot;Project Type&quot; when the project is generated.</inlineHelpText>
        <label>Project Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Project Definition</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project_Category__c</columns>
        <columns>Project_Priority__c</columns>
        <columns>Project_Short_Code__c</columns>
        <columns>Project_Type__c</columns>
        <columns>Project_Record_Type__c</columns>
        <columns>Default_Project_Owner__c</columns>
        <columns>POA_Type__c</columns>
        <columns>Default_POA_Owner__c</columns>
        <columns>isActive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Project Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>